--- a/19 - 21 오픈소스소프트웨어, 임시 저장.md
+++ b/19 - 21 오픈소스소프트웨어, 임시 저장.md
@@ -1,1 +1,41 @@
-# 
+# 19. 오픈소스소프트웨어
+## 오픈소스소프트웨어 개요
++ OSS: open source software 오픈소스
+  - 누구나 특별한 제힌 없이 코드를 보고 사용할수 있는 SW
+  - 자유 소프트웨어(Free Software)에서 출발, 소스의 형태 자체를 중시하는 의미
++ OSI : open source initative (OSI)
+  - opensource.org, 공개소스정의(OSD)의 관리 및 촉진을 담당하는 비영리 조합
+  - 소프트웨어가 실제로 공개 소스라는 것을 증명
+
+## 오픈소스 지원 관리 서버
++ 소스코드를 통해 여러 개발자가 협업하고 공유하며 이를 지원하는 방안을 마련
+  - github, gitlab, bitbucket
+  - 창의적이고 과학적이며 기술적인 발전을 이루어낼수 있음
+
+## OSS 장단점
++ 장점
+  - 소스코드 공개
+    * 누구든 보다 쉽게 연구하여, 새로운 프로그래밍 기술 개발
+    * 광범위한 오픈소스 커뮤니티와 공유
+  - 커스터마이징과 혁신 지원
++ 단점
+  - 공개의 의무
+  - 품질보증 및 유지보수, 보안의 어려움
+
+## 오픈소스 개발 모델
++ LAMP : 대부분의 웹을 지원하는 서비스 스택 모델
+  - Linux, Apache, MySQL, PHP 등이 있음
+## OSS 라이선스 종류
+### 저작권의 범위에 따라 해당 소프트웨어 사용, 위반 시 법적 책임이 따름.
++ GNU General Public : 프로그램 수정하고 배포하는 모든 경우에 무조건 GPL로 공개를 해야함.
+  + 리눅스 커널, Git, 마리아 DB, 워드프레스, 파이어폭스(v2.0) 등)  
+    - AGPL(GNU - Affero GPL) : GPL을 기반으로 만든 라이선스, 네트워크로 상호작용하는 소프트웨어의 소스코드도 공개해야함
+       - 몽고DB 등
+    - LGPL(GNU - Lesser GPL) : 완화된 GPL 라이선스, 사용된 오픈소스 라이브러리에대한 소스코드만 공개
+       - 파이어폭스 등
++ MIT License
++ Apache
++ BSD
++ MySQL
++ SUSE
++ UBuntu
