--- a/19 - 21 오픈소스소프트웨어, 임시 저장.md
+++ b/19 - 21 오픈소스소프트웨어, 임시 저장.md
@@ -28,14 +28,16 @@
 ## OSS 라이선스 종류
 ### 저작권의 범위에 따라 해당 소프트웨어 사용, 위반 시 법적 책임이 따름.
 + GNU General Public : 프로그램 수정하고 배포하는 모든 경우에 무조건 GPL로 공개를 해야함.
-  + 리눅스 커널, Git, 마리아 DB, 워드프레스, 파이어폭스(v2.0) 등)  
-    - AGPL(GNU - Affero GPL) : GPL을 기반으로 만든 라이선스, 네트워크로 상호작용하는 소프트웨어의 소스코드도 공개해야함
+  - 리눅스 커널, Git, 마리아 DB, 워드프레스, 파이어폭스(v2.0) 등  
+    * AGPL(GNU - Affero GPL) : GPL을 기반으로 만든 라이선스, 네트워크로 상호작용하는 소프트웨어의 소스코드도 공개해야함
        - 몽고DB 등
-    - LGPL(GNU - Lesser GPL) : 완화된 GPL 라이선스, 사용된 오픈소스 라이브러리에대한 소스코드만 공개
+    * LGPL(GNU - Lesser GPL) : 완화된 GPL 라이선스, 사용된 오픈소스 라이브러리에대한 소스코드만 공개
        - 파이어폭스 등
-+ MIT License
-+ Apache
-+ BSD
-+ MySQL
-+ SUSE
-+ UBuntu
++ MIT License : 가장 느슨한 조건을 가져 많은 사람이 사용하기 용이
+  - 부트스트랩, Angular.js, Backbone.js , jQuery
++ Apache : 소스코드 공개에 대한 의무사항은 포함X, 아파치 라이센스를 꼭 포함시켜야하고 아파치 재단의 소프트웨어라는 사실을 명시
+  - 안드로이드, 하둡
++ BSD, MySQL, SUSE, UBuntu
+
+# 20. 임시저장 stash
+<img src= "https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/bdd3073b-5f79-46b0-a696-608c88b72129" >
