--- a/19 - 21 오픈소스소프트웨어, 임시 저장.md
+++ b/19 - 21 오픈소스소프트웨어, 임시 저장.md
@@ -40,4 +40,40 @@
 + BSD, MySQL, SUSE, UBuntu
 
 # 20. 임시저장 stash
-<img src= "https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/bdd3073b-5f79-46b0-a696-608c88b72129" >
+## 깃 4영역 = 깃 3영역 + stash
+<img src= "https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/bdd3073b-5f79-46b0-a696-608c88b72129" width="50%" height = "40%">
+
++ 깃에서 임시저장소(스택 구조)에 저장
++ 작업 디렉토리 내용과 스테이징 영역 내용이 stash에 저장됨, 최신 커밋 자료로 남음
+
+## 작업 디렉토리와 스테이징 영역을 숨김(stash)에 저장하고 작업 폴더를 정리
++ $ git stash
++ $ git stash -m '메시지'
++ $ git stash save
++ $ git stash save '메시지'
+
+## 최근 또는 지정된 임시저장소 내용을 가져와 반영하고 삭제
++ $ git stash pop
++ $ git stash pop stash@{n}
+
+## 최근 또는 지정된 임시저장소 내용을 가져와 반영, 작업 디렉토리만 반영, stash목록은 그대로
++ $ git stash apply
++ $ git stash apply stash@{n}
+
+## 임시저장 목록 보기
++ $ git stash list
+
+## 커밋 자료와 최신,해당 stash 항목 간의 차이로 표시
++ 최신
+  - $ git stash show
+  - $ git stash show -p
++ 해당
+  - $ git stash show stash@{n}
+  - $ git stash show stash@{n} -p
+
+## 최근 임시저장 내용을 삭제
++ $ git stash drop
+## 지정된 임시저장 내용을 삭제
++ $ git stash drop stash@{n}
+## 모든 stash 목록을 모두 제거
++ $ git stash clear
