--- a/22 - 24 브랜치병합, 충돌 해결.md
+++ b/22 - 24 브랜치병합, 충돌 해결.md
@@ -1,1 +1,34 @@
-
+# 22. 다양한 브랜치 병합
+## 병합
++ 병합(merge) : 두 개의 브랜치를 하나로 모으는 과정
+  - fast-forward(빨리 감기)병합
+     * 조건 : 현재 브랜치 master가 병합할 대상 커밋의 직접적인 뿌리(조상)가 되는 경우
+     * 간단히 두 브랜치가 일렬 상태일때 병합 가능.
+     * 병합 후 :![image](https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/43851cd8-fae6-4764-b545-6754f559c1de)
+  - 3-way 병합
+    * 3-way 상태 : 두 분기가 갈라진 상태
+    * 새로운 커밋을 사용하여 두 기록을 합침.
+    ![image](https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/13aad09d-b445-4e57-931b-6c25e2ca9109)
+  - 옵션 --no-ff 를 사용하여 일렬 상태일때 기본 fast-forward 병합을 사용하지 않고 non fast forward(3-way)병합을 수행
+    * $ git merge --no-ff master 
+## 병합의 다양한 옵션
++ 'non fast-forward 병합' 옵션
++ $ git merge --ff-only master : 상태가 fast-forward인 일렬 상태에서만 병합 진행
++ $ git merge --squash master  : 현재 브랜치에 병합 대상과의 합치는 커밋을 하나 생성해 병합
+  - --squash : 강압적인 병합
+    * 커밋 이력과 병합되는 브랜치 이력도 남기지 않음. 커밋 하나만 생성
+      ![image](https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/d7eb87e5-4476-4578-be61-88cb40e38ef6)
+# 24. 병합 충돌과 해결
+## 병합 충돌
++ 병합 충돌(conflict) 이해
+  - 3-way상태에서 두 브랜츠의 동일 조상인 커밋을 기준, 병합할 두 브랜치의 마지막 커밋을 비교
+  - 충돌의 기준
+    * 파일 충돌 발생 : 두 브랜치 모두에서 변경 사항이 달리 발생한 파일
+    ![image](https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/32cb7206-d3fa-4d3a-b050-e0cf7ba984cd)
++ 충돌 해결
+  - 충돌이 발생하면 해당 파일의 충돌을 먼저 해결
+## 충돌 해결
++ 병합 취소 후 다시 병합
+  - 병합 취소 : $ git merge --abort
+  - 다시 병합 : $ git merge feat/list
+  - 추가, 커밋 동시에 : $ git commit -am 'Resolve conflict, main'
