--- a/28 - 30 버전 되돌리기, 커밋 취소.md
+++ b/28 - 30 버전 되돌리기, 커밋 취소.md
@@ -1,1 +1,36 @@
+# 28. 버전 되돌리기 reset
+## reset
++ 커밋 이력에서 이전 특정 커밋으로 완전히 되돌아가는 방법
+  - 이동되는 해당 커밋 이후의 이력은 모두 사라지므로 주의
+  - 깃 저장소는 이전 커밋 내용으로 수정
++ 3가지 옵션
+  - --hard
+    * 지정된 HEAD의 내용으로 작업 폴더와 스테이지 영역, 깃 저장소가 모두 복사・수정
+    * reset전에 있던 작업 폴더와 스테이징 영역의 작업내용이 모두 사라짐
+    * $ git reset --hard ORIG_HEAD 을 이용하면 다시 바로 이전상태로 돌아감
+  - --mixed
+    * 지정된 HEAD의 내용으로 작업 폴더와 스테이지 영역, 깃 저장소가 모두 복사・수정
+    * 다만 작업 폴더의 내용은 이전 그대로 남음
+    * 옵션 --mixed는 옵션이 없는것과 비슷. 기본형태
+  - --soft
+    * 지정된 HEAD의 내용으로 저장소가 모두 복사・수정
++ reset과  checkout의 차이점
+  - reset : 브랜치 마지막의 커밋을 수정  
+![image](https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/5ed94c38-2b2e-4fa8-9a9d-1753e82d4a97)
+  - checkout : HEAD포인터를 브랜치 마지막 커밋 이전으로 이동하는 명령
+![image](https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/df8e488c-04d6-4109-951f-22ae080dd8d0)
 
+# 30. 커밋 취소 revert
+## revert
++ undo와 비슷한 기능
+  - 지정한 특정 커밋을 취소해 바로 이전 상태로 되돌리는 방법
+  - 이전의 커밋 히스토리는 그대로 유지하고, 되돌렸다는 새로운 커밋이 그 이후에 추가됨
+  - 커밋할 것이 있고 작업 영역(working tree)이 깨끗하지 않으면 오류
++ 충돌 해결
+  - 바로 이전 취소를 여러 번 계속 시도.
+  - [ctrl + z]를 여러번 하는 것과 비슷
++ 옵션
+  - --no-edit : 추가되는 커밋 메시지가 자동으로 "Revert "이전 커밋 메시지""으로 지정
++ reset과 revert 비교
+  - reset : 특정 커밋으로 되돌아가고 그 이후의 로그 이력은 모두 제거
+  - revert : 특정 커밋을 취소하는 새로운 커밋 생성, 이전 모든 이력은 그대로 남음
