Update 1 - 3 교과목, 깃 개요.md

--- a/1 - 3 교과목, 깃 개요.md
+++ b/1 - 3 교과목, 깃 개요.md
@@ -1,1 +1,12 @@
-
+# 1. 강의 개요
+## 학습 내용
++ 오픈소스소프트웨어(OSS : Open Source Software)
+  - 소스 코드의 공개를 뜻하는 용어
++ 깃 (Git)
+  - 버전관리 소프트웨어
++ 깃허브 (Github)
+  - 깃 기반의 저장소 및 소프트웨어 협업 개발을 위한 웹호스팅 서비스
+## 교과목 목표
++ OSS에 대한 학습을 기반으로 팀 단위의 소프트웨어 개발에 필요한 버전 관리기법과 협업 기술을 학습
+  - 오픈소스에 대한 이해를 바탕으로 오픈소스의 개발 과정의 협업 방법을 학습
+  - 버전관리를 위한 깃(Git) 활용 학습
