Update 7 - 9 커밋과 로그, 과거 여행.md

--- a/7 - 9 커밋과 로그, 과거 여행.md
+++ b/7 - 9 커밋과 로그, 과거 여행.md
@@ -1,1 +1,42 @@
+# 7. 깃 커밋과 로그
+## 깃 3영역
++ 작업 영역(Working driectory)
+  - 탐색기 상의 폴더 하부
++ 스테이징 영역(staging area)
+  - 저장소의 .git 폴더의 파일 index
++ 깃 저장소(git repository)
+  - 저장소의 .git 폴더의 여러 정보
+## add, commit
++ $ git add
+  - 파일을 Working tree => Staging Area로 이동
++ $ git commit
+  - Staging Area에 준비된 파일 => Git repository(버전관리)로 이동
+## 깃 상태 보기
++ 명령 git status : 깃 저장소의 현재 상태를 확인
+  - $ git status [--long] : 현재의 상태 표시, 기본 값(
+  - $ git status [--short | -s] 현재의 상태를 간단히 표시
+  - $ git config --global --edit 도움말 보기
+## 파일 생성
++ 리눅스 명령 echo와 >, >> 를 사용
+  - echo create > hello.txt
+  - $ cat hello.txt --> create
+## untracked file 
++ 처음 만들어진 파일, 추적되지 않는 파일
+
+![image](https://github.com/dbwhdgjs/2023_OSS_dbwhdgjs/assets/127083569/8250d0a7-2531-4812-939d-443f9204caab)
+## 커밋
++ 버전 관리를 위해 현재 스테이지 영역의 내용에 대해 스냅샷(snap shot)을 찍는 명령
+  - 즉 커밋으로 버전 관리를 위해 인덱스에 추가된 파일들의 현재 상태를 저장
+  - 주요 명령
+    * $ git commit : 커밋 메시지를 입력할 기본 편집기 실행됨
+    * $ git commit -m ‘message' : 커밋 메시지를 직접 입력 [-m | --message]
+    * $ git commit -am ‘message' : 추가와 커밋을 함께 실행 [-a | --all]
+## 커밋 로그 이력 보기
++ $ git log : 로그 이력 정보를 표시
++ $ git log --oneline : 로그 이력을 한 줄로 표시
++ $ git log [--patch | -p] : 로그 이력과 함께 파일의 변화(이전 커밋과의 차이)를 표시
+  - 모든 커밋을 구분하기 위한 번호인 커밋 ID, 또는 체크섬(checksum), 암호학의 SHA-1 사용
+## 커밋 정보 git show
+
+
 
