Update 7 - 9 커밋과 로그, 과거 여행.md

--- a/7 - 9 커밋과 로그, 과거 여행.md
+++ b/7 - 9 커밋과 로그, 과거 여행.md
@@ -16,6 +16,13 @@
   - $ git status [--long] : 현재의 상태 표시, 기본 값(
   - $ git status [--short | -s] 현재의 상태를 간단히 표시
   - $ git config --global --edit 도움말 보기
++ 파일 처음 생성 : untracked file (??)
+  - 붉은 색 표시는 작업 디렉토리를 의미
++ 처음 add한 파일 : A new file (A)
+  - 녹색 표시는 스테이징 영역을 의미
++ 다시 수정한 파일 : Modified file (M)
+  - 스테이징 영역과 비교해서 작업 디렉토리의 파일이 수정된 것을 의미
+
 ## 파일 생성
 + 리눅스 명령 echo와 >, >> 를 사용
   - echo create > hello.txt
@@ -37,6 +44,7 @@
 + $ git log [--patch | -p] : 로그 이력과 함께 파일의 변화(이전 커밋과의 차이)를 표시
   - 모든 커밋을 구분하기 위한 번호인 커밋 ID, 또는 체크섬(checksum), 암호학의 SHA-1 사용
 ## 커밋 정보 git show
-
-
++ 특정한 커밋 정보를 확인하려면 명령 git show를 사용
+  - $ git show : 마지막 커밋(HEAD)의 커밋 정보 표시
+  - $ git show --oneline : 커밋 로그 한 줄과 파일 차이 표시
 
