--- a/7 - 9 커밋과 로그, 과거 여행.md
+++ b/7 - 9 커밋과 로그, 과거 여행.md
@@ -47,4 +47,13 @@
 + 특정한 커밋 정보를 확인하려면 명령 git show를 사용
   - $ git show : 마지막 커밋(HEAD)의 커밋 정보 표시
   - $ git show --oneline : 커밋 로그 한 줄과 파일 차이 표시
-
+  - 
+# 8. 로그 이력과 과거 여행
+## 저장소 생성
++ $ git init basic
+## checkout
++ 현재 브랜치에서 과거 커밋 HEAD~로 이동
+  - 그 상태에서 당시의 파일 내용을 확인 가능
+    * $ git checkout HEAD~ : HEAD 이전 커밋으로 이동
+    * $ git checkout - : 이전 checkout으로 이동
+    * $ git checkout main : 브랜치의 마지막 커밋으로 이동
