--- a/13 - 15 버전과 태그, 브랜치.md
+++ b/13 - 15 버전과 태그, 브랜치.md
@@ -1,1 +1,69 @@
+# 13. 버전과 태그 개요
+## 실제 SW 버전
++ 버전
+  - 프로그램을 수정하거나 개선할 때마다 코드를 구분하려고 부여된 식별자를 의미
+  - 보통 숫자 사용, '년,월'을 사용하기도 함.
+  - 보통 두 자리 또는 세 자리 형태의 숫자로 작성
+    * 1.0 , 2.1.4
+## SemVer(Semantic Versioning) 방식
+  - major
+    * 첫 자리가 0으로 시작하면 아직 초기 개발 중인 제품이라는 의미
+    * 정식 버전은 1부터 시작
+  - minor
+    * 메이저 버전에서 기능을 추가하거나 변경 사항이 있을 때 바꿈
+  - patch
+    * 버그 수정 등 미미한 변화가 있을 때 바꿈
+## tag 기능
++ 태그
+  - 특정 커밋(해시 값)에 버전 번호나 다른 이름을 부여하는 기능, 보통 v1.4.0
++ 2가지 종류
+  - 주석 태그(Annotated tag)
+    * 태그 이름 + 정보(태그 작성자 이메일, 태그 시각, 태그 메시지) 포함
+    * 태그 법전 이름 중복 불가능
+  - 일반 태그 (Lightweight tag)
+    * 태그 이름만 포함
+## 태그 명령
++ 주석 태그
+  - $ git tag –a v1.0.0 –m ‘first version’
+  - $ git tag –a v1.1.0 commitID
+    * 특정 커밋에 태그를 붙임
++ 일반 태그 생성
+  - 태그의 버전 정보만 관리
+  - $ git tag v1.0.1
+  - 태그 버전 이름 중복 불가능
++ 태그 목록 보기
+  - $ git tag
+    * 예전 태그부터 표시
++ 태그 정보 보이기
+  - $ git show v1.0.1
++ 태그 삭제
+  - $ git tag –d v1.0.1
+
+# 14. 브랜치 개요와 관리
+## 브랜치 개요
++ 깃 브랜치
+  - 파일 작성 작업을 하다 보면 여러 파일을 관리하는 폴더를 통째로 복사해 활용하는 일이 자주 발생
+  - 버전 관리를 수행하던 일련의 파일 집합을 통째로 복사해 독립적으로 다시 개발을 진행하는 개념
+  - 브랜치 병함(merge)
+    * 독립된 브랜치에서 마음대로 소스 코드를 변경하여 작업한 후 원래 버전과 합칠 수 있음
++ 기본 브랜치
+  - 저장소 생성 시 처음 만들어지는 브랜치, main
+  - 기본 브랜치 이름 설정
+    * $ git config --global init.defaultBranch main
+## 브랜치
++ 브랜치
+  - 커밋 사이를 가볍게 이동할 수 있는 포인터
+  - HEAD : 작업 중인 브랜치의 최신 커밋을 가리키는 포인터
+    * checkout, switch 명령 사용하여 헤드 이동 가능
++ 브랜치 생성
+  - 단순히 생성하고 HEAD가 이동은 안함
+    * $ git branch bname
+  - 생성하고 새 브랜치로 HEAD 이동도 수행
+    * $ git switch –c bname
+    * $ git checkout –b bname
+ + 브랜치 확인
+   - $ git branch : 커밋이 발생한 브랜치 목록 보이기
+   - $ git branch -v : 브랜치마다 마지막 커밋 ID와 메시지도 함께 표시
++ 브랜치 삭제
+   - $ git branch –d branch-name
 
